--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
 
         <h3>Example Usage:</h3>
         <p>
-          [base url]/api/whoami
+          <a href="https://alphons666-boilerplate-project-headerparser.glitch.me/api/whoami">https:// :).glitch.me/api/whoami</a>
         </p>
 
         <h3>Example Output:</h3>
